// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionConverter convertOptions when passing options such as angularSuffix should convert it 1`] = `
Array [
  JDLBinaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "angularSuffix",
    "value": "toto",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as clientRootFolder should convert it 1`] = `
Array [
  JDLBinaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "clientRootFolder",
    "value": "toto",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as dto should convert it 1`] = `
Array [
  JDLBinaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "dto",
    "value": "mapstruct",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as embedded should convert it 1`] = `
Array [
  JDLUnaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "embedded",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as filter should convert it 1`] = `
Array [
  JDLUnaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "filter",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as microservice should convert it 1`] = `
Array [
  JDLBinaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "microservice",
    "value": "toto",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as noFluentMethod should convert it 1`] = `
Array [
  JDLUnaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "noFluentMethod",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as pagination should convert it 1`] = `
Array [
  JDLBinaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "pagination",
    "value": "pagination",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as readOnly should convert it 1`] = `
Array [
  JDLUnaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "readOnly",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as search should convert it 1`] = `
Array [
  JDLBinaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "search",
    "value": "elasticsearch",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as service should convert it 1`] = `
Array [
  JDLBinaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "service",
    "value": "serviceClass",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as skipClient should convert it 1`] = `
Array [
  JDLUnaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "skipClient",
  },
]
`;

exports[`OptionConverter convertOptions when passing options such as skipServer should convert it 1`] = `
Array [
  JDLUnaryOption {
    "entityNames": Set {
      "A",
    },
    "excludedNames": Set {
      "B",
    },
    "name": "skipServer",
  },
]
`;
